Translated program to english

--- a/locales/en.json
+++ b/locales/en.json
@@ -56,6 +56,37 @@
     "bioGuyon": "Unstoppable, Thomas is a merry man who does not hesitate to put himself in strange situations for his short films. Add to that a few drops (understand 'liters') of alcohol, and you're in for more than one laugh. As comfortable with a beer as he is with a camera in his hand, he also has a surprising tendency to align himself on the orthonormal reference frame, with a clear preference for the abscissa axis. If you had to remember one phrase that sums up his impeccable investment in every task he undertakes it would be, 'The CLAP staffe SOBRE!' (which he obviously respects)",
     "bioLuiz": "Of Brazilian blood, Luiz had to trade the sun of Rio for that of Lille (who said that... in short). As a lover of good music, he uses his sense of rhythm to interpret perfectly the theme of the wii (in loop). Impassive informant, his advices can be indispensable as when he proposes to recruit a baby to fit in an owl costume. In love with his bed, will he ever part with his pillow? Never!",
     "bioEva": "If she can handle spicy food without any trouble, Eva is basically nothing but sweetness and tenderness for those around her. Discreetly equipped with her camera, she knows how to capture the best files of her fellow listers, thus feeding our 'Team building Lolilol' drive with her most beautiful pieces. Her second artistic string belongs to the musical domain: her pronounced taste (especially regarding Jay Chou) and her originality are two key ingredients for a successful evening. If she can surprise by investing herself in a torcho, Eva knows above all how to keep her cool and remain impassive in front of the 'living above the DF' test",
-    "bioSirine": "Sirine is a rose. From her (future) Italian roots, to her spikes, each one sharper than the next.nProfessional tackler on and off the field, she shoots faster than her shadow towards the goal (even in defense) and on her next. If she gave birth to the idea of the trombinodoss, it is also by her (sometimes) gravelly humor that she stands out.\nA categorical lover of the French language, you won't surpass her in literary culture, nor in writing and even less in dictation."
+    "bioSirine": "Sirine is a rose. From her (future) Italian roots, to her spikes, each one sharper than the next.nProfessional tackler on and off the field, she shoots faster than her shadow towards the goal (even in defense) and on her next. If she gave birth to the idea of the trombinodoss, it is also by her (sometimes) gravelly humor that she stands out.\nA categorical lover of the French language, you won't surpass her in literary culture, nor in writing and even less in dictation.",
+
+    "integration": "Integration",
+    "topicInte1": "Continue on the achievements of Puls'art in the integration of internationals (translation of posts and website in English in particular).",
+    "topicInte2": "Promote the diversity of musical cultures in our events (background music) in partnership with Club Time.",
+    "topicInte3": "Communicate with ENSCL and its BDA to concretize the fusion of the artistic associative life.",
+    "topicInte4": "Organize a contest to redesign the T-shirt given by Centrale on the first day of integration.",
+    "topicInte5": "Redo the Centrale class songs in collaboration with the BDS and CLIC, in order to be able to defend Centrale correctly and respectfully against the other schools during sports tournaments in particular.",
+
+    "ameliorations": "Improvements",
+    "topicAme1": "Expand TDN to the other schools of Lille and the North, by doing more communication, especially with the schools that were participating to the event before the covid.",
+    "topicAme2": "Increase the communication on the Icares in order to proudly represent our school in front of the other Centrales.",
+    "topicAme3": "Rethink the format of the newsletter to make it more accessible and attractive: make it in the form of podcasts or short videos.",
+    "topicAme4": "Enhance the BDA's outings group, and publish every month on promo the schedule of artistic events of the central associations.",
+
+    "nouveaux-evenements": "New events",
+    "topicNE1": "Organize a carnival at the Rez, in partnership with the other BDX.",
+    "topicNE2": "Revive the Peacock Art student theater festival, lost since 2019 due to Covid. This festival gathering several associations of schools of the Lille metropolis proposed representations of theater, improvisation, musical comedy or dance.",
+    "topicNE3": "Organize a Centralienne exhibition in order to highlight the various artistic productions of the students; those who wish to do so will also be able to participate in a one-week thematic contest",
+
+    "autres-evenements": "Other events",
+    "topicAE1": "Continue on the achievements of our elders: cultural outings & good deals on Lille, renewal of old events (TDN, ICares, GOSt, inter school outing in Paris, Rallille, Fête de la musique with the teachers and alumni).",
+    "topicAE2": "Increase the number of GOSt to 3 to allow more people to perform, or even reserve one for musical performances to free up time and extend the performances. Indeed, the number of musicians at the school wishing to express themselves is consequent and the schedule of the GOSt is already very busy. Therefore, not all of them have the opportunity to perform at the moment",
+
+    "divers": "miscellaneous",
+    "topicDivers1": "Limit our waste production and ecological impact during our events (especially regarding food), and track our progress with regular carbon audits. ",
+    "topicDivers2": "Promote the use of the library as something other than a club room, by organizing regular cultural events in a more peaceful setting than 8pm to midnight: karaoke nights / small exhibitions / book sale...",
+    "topicDivers3": "To help with the administrative management of the events of the artistic and cultural associations of the school at their request, and to bring them financial support if necessary.",
+
+    "culture-general": "Develop general culture",
+    "topicCulture1": "Establish a habit of publishing twice a week from the BDA on Centrash and our insta page, small news of culture G random.",
+    "topicCulture2": "Questions for a Centralien evening, 8pm-00am in the foyer, to develop G culture at Centrale, with obvious prizes."
 
 }
